@@ -1,4 +1,5 @@
 HEAD
+	+ More robust dashboard agains widget and remoteservices errors
 	+ Added missing use in hasManyViewer.mas
 	+ Only allow restore from backups from versions with the same two
 	  first version numbers
